--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                                 <div class="separator separator">
                                     <img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" alt="Decorative text bullet" />
                                 </div>
-                                <h5 class="balanced-text">A Mathematician, a Different Kind of Mathematician, and a Statistician</h5>
+                                <h5 class="balanced-text sans-serif">A Mathematician, a Different Kind of Mathematician, and a Statistician</h5>
                             </div>
                         </div>
                     </div>
