Rotate bumpers to new kamon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                                  alt="James Howard wordmark" />
                             <div class="separator-container">
                                 <div class="separator separator">
-                                    <img src="{{ '/assets/img/martlet.svg' | relative_url }}" height="35rem" alt="Decorative text bullet" />
+                                    <img src="{{ '/assets/img/identity/kamon.svg' | relative_url }}" height="35rem" alt="Decorative text bullet" />
                                 </div>
                                 <h5 class="balanced-text sans-serif">A Mathematician, a Different Kind of Mathematician, and a Statistician</h5>
                             </div>
@@ -50,7 +50,7 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
                                  style="width: 50%;"
                                  alt="James Howard wordmark" />
                             <div class="separator separator-info mt-2 mb-2">
-                                <img src="{{ '/assets/img/martlet.svg' | relative_url
+                                <img src="{{ '/assets/img/identity/kamon.svg' | relative_url
                                           }}" height="35rem" alt="Decorative text bullet" />
                             </div>
                             <h5 style="margin-top: 0px;">A Mathematician, a Different Kind of<br />Mathematician, and a Statistician</h5>
@@ -75,9 +75,9 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
     <div class="container">
         <div class="row">
             <div class="title-area">
-                <h2>Explore My World</h2>
+                <h2 class="text-info">Explore My World</h2>
                 <div class="separator separator-info">
-                    <img src="{{ '/assets/img/martlet-info.svg' | relative_url
+                    <img src="{{ '/assets/img/identity/kamon-info.svg' | relative_url
                               }}" height="35rem" alt="Decorative text bullet" />
                 </div>
             </div>
@@ -193,9 +193,8 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
 <div class="section section-cards section-gray">
     <div class="container">
         <div class="title-area">
-            <h2>Most Recent Posts</h2>
-            <div class="separator separator-info"><img src="{{ '/assets/img/martlet-info.svg' | relative_url }}" height="35rem"
-                                                         alt="Decorative text bullet" /></div>
+            <h2 class="text-info">Most Recent Posts</h2>
+            <div class="separator separator-info"><img src="{{ '/assets/img/identity/kamon-info.svg' | relative_url }}" height="35rem" alt="Decorative text bullet" /></div>
         </div>
 
         <div id="masonry-container" class="row">
@@ -241,16 +240,16 @@ subtitle: The website of James Howard, a Mathematician, a Different Kind of Math
     </div>
 </div>
 
-<div class="section section-get-started">
+<div class="section section-cards section-get-started">
     <div class="parallax filter filter-color-black">
-        <div class="image index-fade" style="background-image: url({{
-                                             '/assets/img/heading-martlets.webp' | relative_url }})"></div>
+        <div class="image index-fade" style="background-image: url({{ '/assets/img/heading-martlets.webp' | relative_url }})"></div>
         <div class="container">
             <div class="title-area">
-                <h2 class="text-white">Dive Deeper into My Universe</h2>
-                <div class="separator separator"><img src="{{
-                                                           '/assets/img/martlet.svg' | relative_url }}" height="35rem"
-                                                      alt="Decorative text bullet" /></div>
+                <h2 class="text-warning">Dive Deeper into My Universe</h2>
+
+                <div class="separator separator-warning">
+                    <img src="{{ '/assets/img/identity/kamon-warning.svg' | relative_url }}" height="35rem" alt="Decorative text bullet" />
+                </div>
             </div>
             <div class="row">
                 <a href="{{ '/honors' | relative_url }}">
