Added a new head modification scheme

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: base
 title: Home
 subtitle: The website of James Howard, a Mathematician, a Different Kind of Mathematician, and a Statistician
+head_additions: >-
+  <tag/>
 ---
 
 <div class="section section-header">
