Rename to head_inject

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: base
 title: Home
 subtitle: The website of James Howard, a Mathematician, a Different Kind of Mathematician, and a Statistician
-head_additions: >-
+head_inject: >-
   <!-- Halloween styles -->
   <link rel="stylesheet" href="/assets/css/halloween.css">
 
