--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ head_inject: >-
                     </div>
                 </a>
 
-                <a href="{{ '/family' | relative_url }}">
+                <a href="{{ '/ancestry' | relative_url }}">
                     <div class="col-md-4 col-sm-6">
                         <div class="warning-icon">
                             <div class="icon text-warning">
